Capture and expose notification delivery errors (#31)
This PR makes it possible to store the last error for each receiver in case of notification delivery failure. These errors are exposed via the `/api/v2/receivers` endpoint.


^ Conflicts:
^	cmd/alertmanager/main.go
^	config/receiver/receiver.go
^	notify/notify.go

^ Conflicts:
^	notify/notify.go
